<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppLock</string>
    <string name="manage_passcode">Manage Pin</string>
    <string name="enter_passcode">Enter Pin</string>
    <string name="enter_old_passcode">Enter old pin</string>
    <string name="reenter_passcode">Re-enter pin</string>
    <string name="change_passcode">Change pin</string>
    <string name="setup_passcode">Setup Pin</string>
    <string name="passcode_wrong">Wrong pin, please try again.</string>
    <string name="disable_passcode">Disable pin</string>
    <string name="enable_passcode">Enable pin</string>

    <string name="txtEnterPin">Enter Pin</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnClear">CLEAR</string>
    <string name="btnDelete">DEL</string>

    <string name="imgvLockerIcon">Locker Icon</string>

</resources>