<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_applock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/icon"
            android:contentDescription="@string/imgvLockerIcon"/>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:singleLine="true"
            android:text="@string/txtEnterPin"
            android:textColor="#FF464646"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll_passcodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passcode_1"
                style="@style/PasscodeInputIStyle">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/passcode_2"
                style="@style/PasscodeInputIStyle"/>

            <EditText
                android:id="@+id/passcode_3"
                style="@style/PasscodeInputIStyle"/>

            <EditText
                android:id="@+id/passcode_4"
                style="@style/PasscodeInputIStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tl_keys"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow>

                    <Button
                        android:id="@+id/button1"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn1" />

                    <Button
                        android:id="@+id/button2"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn2"/>

                    <Button
                        android:id="@+id/button3"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn3" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/button4"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn4" />

                    <Button
                        android:id="@+id/button5"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn5" />

                    <Button
                        android:id="@+id/button6"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn6" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/button7"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn7" />

                    <Button
                        android:id="@+id/button8"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn8" />

                    <Button
                        android:id="@+id/button9"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn9" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/button_clear"
                        style="@style/PasscodeButtonStyle"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/btnClear" />

                    <Button
                        android:id="@+id/button0"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btn0" />

                    <Button
                        android:id="@+id/button_erase"
                        style="@style/PasscodeButtonStyle"
                        android:text="@string/btnDelete" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>